--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <html lang="en">
-
 <head>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-B1TW81HLYQ"></script>
@@ -35,10 +34,20 @@
 	<link href="https://tenizgame.github.io/tennisicon.jpg" rel="apple-touch-icon" />
 	<link rel="manifest" href="https://tenizgame.github.io/teniz_manifest.json" />
 </head>
-
 <body>
 	<button id="btnParty" type="button" hidden></button>
 	<div id="tsparticles"></div>
+	<div id="stats">
+		<div id="stats-item">
+			<span class="stats-item">
+				<class data-modal-target="#modal" id="rulesbutton"><img src="rulesicon.png" style="width:30px;height:30px;">
+			</span>	
+			<span class="stats-item">
+				<class data-summary-target="#summary" id="statsbutton"><img src="statsicon.png" style="width:40px;height:30px;">
+			</span>			
+		</div>
+	</div>		
+	<center><img class="headerimage" src="wallpaper.jpg" style="width:200px;height:113px;">
 	<div id="title">
 		<div class="waviy1">
 			<span style="--i:1">T</span>
@@ -46,16 +55,6 @@
 			<span style="--i:3">N</span>
 			<span style="--i:4">I</span>
 			<span style="--i:5">Z</span>
-		</div>
-		<div id="stats">
-			<div id="stats-item">
-				<span id="60" class="stats-item">
-					<class data-modal-target="#modal" id="rulesbutton"><img src="rulesicon.png" style="width:30px;height:30px;">
-				</span>
-				<span id="70" class="stats-item">
-					<class data-summary-target="#summary" id="statsbutton"><img src="statsicon.png" style="width:40px;height:30px;">
-				</span>
-			</div>
 		</div>
 	</div>
 	<br>
@@ -73,19 +72,15 @@
 		<span style="--i:11">e</span>
 		<span style="--i:12">r</span>
 		<span style="--i:13"> </span>
-		<span style="--i:14">E</span>
-		<span style="--i:15">v</span>
-		<span style="--i:16">e</span>
-		<span style="--i:17">r</span>
+		<span style="--i:14">D</span>
+		<span style="--i:15">a</span>
+		<span style="--i:16">i</span>
+		<span style="--i:17">l</span>
 		<span style="--i:18">y</span>
-		<span style="--i:19">d</span>
-		<span style="--i:20">a</span>
-		<span style="--i:21">y</span>
-		<span style="--i:22">-</span>
-		<span style="--i:23">D</span>
-		<span style="--i:24">A</span>
-		<span style="--i:25">Y</span>
-		<span style="--i:26" id="daycount"></span>
+		<span style="--i:19"> </span>
+		<span style="--i:20">#</span>
+		<span style="--i:21"> </span>
+		<span style="--i:22" id="daycount"></span>
 	</div>
 	<!-- <div id="mycounter"></div> -->
 	<!-- <button data-modal-target="#modal">Start Game</button>  -->
@@ -107,26 +102,64 @@
 			<button data-close-button class="close-button">&times;</button>
 		</div>
 		<div class="modal-body Contents">
+		    <strong style="color:red;"> Based on User Feedback, the rules of the game have changed in the way the Year and GS titles are used. Please go through the rules again.</strong>
 			<p id="text-area">
 			(i) <strong style="color:white;">TENIZ</strong>, a game inspired by <strong style="color:white;">WORDLE</strong>, tests your knowledge on Tennis Grand Slam Champions of the Open
-			Era. The objective is to identify the Champion Tennis Player every day, using the Clues. <strong style="color:white;"><a href = "https://youtu.be/hxfDhdt-29I" target="_" class="youtube"><u>Check out a Video I made about the game here</a></u></strong>, and then read the rest of this page to learn more. 
+			Era. The objective is to identify the Champion Tennis Player every day, using the Clues.
 			<br><br>
-			(ii) The mystery player needs to be identified based on attributes (shown at the top of the page) of <strong style="color:white;">ONE OF THEIR GS WINS.</strong> These attributes include Year won, Slam won, Country (at the time of win), Gender, Total GS Singles Titles and Style of Play (RH vs
-			LH). If a person has won mutliple Slams, the same player can be repeated on another day with another of their Wins.
+			(ii) The mystery player needs to be identified based on attributes (shown at the top of the page) based on their <strong style="color:white;">GRAND SLAM CAREER STATS.</strong> These attributes include Year Born, Slams Won, Country (could be multiple countries), Gender, Total GS Singles Titles and Style of Play (RH vs
+			LH). 
 			<br><br>			
 			(iii) Use the search area to key in your answer and hit Enter <img src="search.png"style="width:20px;height:20px;">. After each guess, details of the player you entererd are listed. You also get <strong style="color:white;">INDICATORS </strong>to show how the attributes of the player you entered, match against that of the player in question. 
 			<br><br>			
-			(iv) 🟢 Indicates a match, 🔴 indicates a no-match and 🟡 indicates that what you guessed is within a range of +/- 3 (for year and titles only). 🟡 for Country, indicates a match in the Continent.
+			(iv) 🟢 Indicates a match, 🔴 indicates a no-match and 🟡 indicates that what you guessed is within a range of +/- 3 (for year and titles only). 🟡 for Country, indicates a match in the Continent. Remember, a person could be a citizen of multiple countries and some contries are part of multiple continents. 🟡 for GS, indicates that the players have won some GS in common but they are not the exact match. 
 			<br><br>
-			(v) For eg: a 🟢 in the first position (Year), indicates that the player you entered has won some GS in the same year as in question. A 🔴 in the first position (Year), indicates that the player you entered has not won any GS in the year as in question. It <strong style="color:white;"> DOES NOT </strong> mean that the player your entered and the mystery player has not won a GS in the same year. Remember, only <strong style="color:white;">ONE </strong>win of the mystery player is being compared here.
+			(v) For eg: a 🟢 in the first position (Year), indicates that the player you entered was born in the same year as the player in question. A 🔴 in the first position (Year), indicates that the player you entered was not born within 3 years of the player in question. 
 			<br><br>
-			(vi) Similarly, a 🔴 in the second position (Slam), indicates that the person you entered has not won the particular slam in question. For eg. if your player has won the FO and the USO, and you get a 🔴 for the second position (Slam), it simply means that this particular Win of the mystery player is either the WIM or AO. They might (or not) have won the FO or the USO at a different time in their career. 
+			(vi) A 🟢 in the second position (Slam), indicates that the person you entered has won the exact same Grand Slams (not the number of titles; just the tournaments) as the player in question. 🟡 for GS, indicates that the players have won some GS in common but they are not the exact match. 🔴 for GS, indicates that there are no common GS wins between the players. 
 			<br><br>				
 			(vii) Switch to the <strong style="color:white;">EASY Mode</strong> any time during the game, where the attributes are revealed, as shown below, after each <strong style="color:white;">INCORRECT</strong> guess. The clues are more direct in this Mode.  
 			<center><img class="howtogif" src="howto.gif" alt="clue"></center>
 			<br>
-			(viii) On your <strong style="color:white;">Final Try</strong>, after you have enabled the Easy Mode, you have the option to look at an <strong style="color:white;">ADDITIONAL HINT </strong>. This is an absolute give-away 😀!
-			<br>
+			(viii) On your <strong style="color:white;">Final Try</strong>, after you have enabled the Easy Mode, you have the option to look at an <strong style="color:white;">ADDITIONAL HINT</strong>. This is an absolute give-away 😀!
+			<br><br>
+			(ix) A new feature of awarding <strong style="color:white;">RANKING POINTS</strong> has been introduced. Depending on which attempt you won the game at, you will be awarded points. It starts at 10 points for the first attempt and reduces by a point for each subsequent try. If you switch to the Easy Mode you will be docked 2 points and if you use the Additional Hint a further 2 points will be docked. No points are awarded if you fail to identify the player. 
+			<strong style="color:white;">TIER</strong> is determined based on Total Points. Try and get to <strong style="color:white;">GRAND SLAM</strong> level!
+			<br><br>
+			<table>
+			  <tr>
+				<th><center>POINTS</center></th>
+				<th><center>TIER</center></th>
+			  </tr>
+			  <tr>
+				<td>0 - 99</td>
+				<td>FUTURES</td>
+			  </tr>
+			  <tr>
+				<td>100 - 249</td>
+				<td>CHALLENGERS</td>
+			  </tr>
+			  <tr>
+				<td>250 - 499</td>
+				<td>LEVEL 250</td>
+			  </tr>
+			  <tr>
+				<td>500 - 999</td>
+				<td>LEVEL 500</td>
+			  </tr>
+			  <tr>
+				<td>1000 - 1499</td>
+				<td>LEVEL 1000</td>
+			  </tr>
+			  <tr>
+				<td>1500 - 1999</td>
+				<td>TOUR FINALS</td>
+			  </tr>
+			  <tr>
+				<td>2000+</td>
+				<td>GRAND SLAMS</td>
+			  </tr>			  
+		  </table>
 			<h5>
 			<hr>
 				<center>Legend :AO - Australian Open | FO - French Open | WIM - Wimbledon | USO - US Open | GS - Grand Slam | RH - Right Handed | LH - Left Handed</center>
@@ -158,6 +191,42 @@
 			<div id="additionalhint"></div>	
 		</div>
 	</div>	
+
+	<div class="fbmodal" id="fbmodal">
+		<div class="fbmodal-header">
+			<div class="title"><strong>
+					<!-- Feedback -->
+					<div class="container">
+						<div class="row">
+							<div class="col-md-12 text-center">
+								<h3 class="animate-charcter">Feedback</h3>
+							</div>
+						</div>
+					</div>
+				</strong></div>
+			<button data-close3-button class="close-button">&times;</button>
+		</div>
+		<div class="fbmodal-body">
+			Based on User Feedback, the rules of the game have changed in the way the Year and GS titles are used. <strong style="color:white;">Please go through the rules again.</strong>
+			<br><br>
+			<p id="text-area">
+			(i) <strong style="color:white;">TENIZ</strong>, a game inspired by <strong style="color:white;">WORDLE</strong>, tests your knowledge on Tennis Grand Slam Champions of the Open
+			Era. The objective is to identify the Champion Tennis Player every day, using the Clues.
+			<br><br>
+			(ii) The mystery player needs to be identified based on attributes (shown at the top of the page) based on their <strong style="color:white;">GRAND SLAM CAREER STATS.</strong> These attributes include Year Born, Slams Won, Country (could be multiple countries), Gender, Total GS Singles Titles and Style of Play (RH vs
+			LH). 
+			<br><br>			
+			(iii) Use the search area to key in your answer and hit Enter <img src="search.png"style="width:20px;height:20px;">. After each guess, details of the player you entererd are listed. You also get <strong style="color:white;">INDICATORS </strong>to show how the attributes of the player you entered, match against that of the player in question. 
+			<br><br>			
+			(iv) 🟢 Indicates a match, 🔴 indicates a no-match and 🟡 indicates that what you guessed is within a range of +/- 3 (for year and titles only). 🟡 for Country, indicates a match in the Continent. Remember, a person could be a citizen of multiple countries and some contries are part of multiple continents. 🟡 for GS, indicates that the players have won some GS in common but they are not the exact match. 
+			<br><br>
+			(v) For eg: a 🟢 in the first position (Year), indicates that the player you entered was born in the same year as the player in question. A 🔴 in the first position (Year), indicates that the player you entered was not born within 3 years of the player in question. 
+			<br><br>
+			(vi) A 🟢 in the second position (Slam), indicates that the person you entered has won the exact same Grand Slams (not the number of titles; just the tournaments) as the player in question. 🟡 for GS, indicates that the players have won some GS in common but they are not the exact match. 🔴 for GS, indicates that there are no common GS wins between the players. 
+			<br><br>			
+		</div>
+	</div>	
+
 	<div class="summary" id="summary">
 		<div class="summary-header">
 			<div class="title"><strong>
@@ -180,6 +249,8 @@
 				<span id="9" class="summary-item"></span>
 			</div>
 			<br>
+			<div id="tier-item"></div>
+			<div id="points-item"></div>
 			<br>
 			<canvas id="myChart" style="width:100%;max-width:600px"></canvas>
 			<br>
@@ -201,7 +272,7 @@
 			</div>
 			<div>
 				<div id="pzlhdr">Try a different puzzle.</div>
-				<div id="pzl"><b><a href="https://indlegame.github.io/indle" target="_">Play <u>INDLE</u> 🇮🇳 </a></b>
+				<div id="pzl"><b><a href="https://sank0403.github.io/geordle/" target="_">Play <u>GEORDLE</u> 🌎 </a></b>
 				</div>
 			</div>
 		</div><br>
@@ -217,6 +288,7 @@
 	<div id="overlay"></div>
 	<div id="overlay1"></div>
 	<div id="overlay2"></div>
+	<div id="overlay3"></div>
 	<hr>
 	<div id="clue">
 		<div id="clue-ball">
@@ -227,7 +299,7 @@
 	<div id="board" class="scroll">
 		<div id="try1">	</div>
 			<div id="trydetail1" class="trydetail">
-				<div class="detail1">Year</div>
+				<div class="detail1">Born</div>
 				<div class="detail2">Slam</div>
 				<div class="detail3">Country</div>
 				<div class="detail4">Gender</div>
@@ -236,7 +308,7 @@
 			</div><br>
 		<div id="try2"></div>
 			<div id="trydetail2" class="trydetail">
-				<div class="detail1">Year</div>
+				<div class="detail1">Born</div>
 				<div class="detail2">Slam</div>
 				<div class="detail3">Country</div>
 				<div class="detail4">Gender</div>
@@ -245,7 +317,7 @@
 			</div><br>
 		<div id="try3"></div>
 			<div id="trydetail3" class="trydetail">
-				<div class="detail1">Year</div>
+				<div class="detail1">Born</div>
 				<div class="detail2">Slam</div>
 				<div class="detail3">Country</div>
 				<div class="detail4">Gender</div>
@@ -254,7 +326,7 @@
 			</div><br>		
 		<div id="try4"></div>
 			<div id="trydetail4" class="trydetail">
-				<div class="detail1">Year</div>
+				<div class="detail1">Born</div>
 				<div class="detail2">Slam</div>
 				<div class="detail3">Country</div>
 				<div class="detail4">Gender</div>
@@ -263,7 +335,7 @@
 			</div><br>		
 		<div id="try5"></div>
 			<div id="trydetail5" class="trydetail">
-				<div class="detail1">Year</div>
+				<div class="detail1">Born</div>
 				<div class="detail2">Slam</div>
 				<div class="detail3">Country</div>
 				<div class="detail4">Gender</div>
@@ -272,7 +344,7 @@
 			</div><br>		
 		<div id="try6"></div>
 			<div id="trydetail6" class="trydetail">
-				<div class="detail1">Year</div>
+				<div class="detail1">Born</div>
 				<div class="detail2">Slam</div>
 				<div class="detail3">Country</div>
 				<div class="detail4">Gender</div>
@@ -286,6 +358,8 @@
 	<div id="helpbuttons">
 		<button id="MODEButton" class="buttonmode" onclick="changemode();">Switch To EASY MODE</button>	
 		<class data-hintmodal-target="#hintmodal" id="hintbutton" hidden><button id="hint" class="buttonmode" onclick="	additionalhint();">Additional HINT</button></class>	
+		<class data-fbmodal-target="#fbmodal" id="fbmodal" hidden><button id="fbmodalbut" class="buttonmode">TEST</button></class>	
+		<!-- <class data-fbmodal-target="#fbmodal" id="fbmodal"> -->
 	</div>	
 	<hr>
 	<h1 id="answer"></h1>
